[package]
name = "stil"
version = "0.3.1"
description = "generate STatic site from Index Listing of directory"
edition = "2024"
repository = "https://github.com/sermuns/stil"
license = "WTFPL"
keywords = ["site-generator", "listing", "directory", "pages"]
categories = ["command-line-utilities", "web-programming", "filesystem"]
authors = ["Samuel Åkesson <sermuns@lysator.liu.se>"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
maud = "0.27.0"

[build-dependencies]
base64 = "0.22.1"
percent-encoding = "2.3.2"

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true

[profile.dev]
debug = false
