[package]
name = "stil"
version = "0.4.2"
description = "generate STatic site from Index Listing of directory"
edition = "2024"
repository = "https://github.com/sermuns/stil"
license = "WTFPL"
keywords = ["site-generator", "listing", "directory", "pages"]
categories = ["command-line-utilities", "web-programming", "filesystem"]
authors = ["Samuel Åkesson <sermuns@lysator.liu.se>"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
humansize = "2.1.3"
maud = "0.27.0"
time = { version = "0.3.44", features = ["formatting", "local-offset", "macros"], default-features = false }

[build-dependencies]
base64 = "0.22.1"

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true

[profile.dev]
debug = false
